2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py: Refer to the first element of TAGS_* lists for the
	identifying string when creating an address.

	* Defaults.py: New variables: TAGS_CONFIRM, TAGS_DATED,
	TAGS_KEYWORD, TAGS_SENDER.

2002-05-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py: Replace all uses of the string module with string
	methods.
	
2002-05-22  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (sendmail): Terminate commandline switch processing with
	`--'.

	* Defaults.py (ADDED_HEADERS): New variable.

2002-05-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (PURGED_HEADERS): Add "Bcc:" and "Resent-Bcc" to the
	default list.

	* SMTP.py: New module.

	* Util.py (sendmail): Send mail either via SMTP or using
	/usr/sbin/sendmail depending on Defaults.OUTGOINGMAIL.

	* Defaults.py (OUTGOINGMAIL, SMTPHOST,
	SMTP_MAX_SESSIONS_PER_CONNECTION): New variables.

	(SENDMAIL_PROGRAM): Replaces SENDMAIL.

2002-05-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (getfilemode): New utility function which takes a file
	and returns its octal number representing the file permissions bit
	pattern.
		
	* Defaults.py (CRYPT_KEY_FILE): Read CRYPT_KEY from CRYPT_KEY_FILE
	which defaults to ~/.tmda/crypt_key.

2002-05-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): *-ezmlm sources now
	match the parent directory DIR rather than DIR/subscribers.

	(FilterParser.firstmatch): *-mailman sources now match just the
	list directory.  The config database is located automatically.

2002-05-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MTA.py (MTA.deliver): Deliver the message according to
	Defaults.DELIVERY via a Deliver.Deliver() object.

	(Qmail.deliver): Ditto.

	* Defaults.py: DELIVERY replaces LOCAL_DELIVERY_AGENT.

2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
